<resources>
    <string name="app_name">bbitclass</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_home">Home</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="signup">Sign Up</string>

    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="passwordsignup">Password</string>
    <string name="button">Submit</string>


</resources>
