<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="strathmore.com.bbitclass.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <EditText
        android:id="@+id/firstname"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:hint="@string/firstname"
        android:paddingRight="@dimen/firstname"

        android:paddingTop="@dimen/firstname"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:hint="@string/lastname"
        android:paddingRight="@dimen/lastname" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingRight="@dimen/email" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/passwordsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:hint="@string/passwordsignup"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:text="@string/button"
        android:textColor="@color/colorAccent"
        />
</LinearLayout>
