<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="strathmore.com.bbitclass.ActivityLogin"
    tools:showIn="@layout/activity_login"
    android:background="@color/colorPrimary">


   <EditText
       android:id="@+id/username"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingRight="@dimen/paddingRight"
       android:hint="@string/username"
       android:layout_marginTop="@dimen/marginTop"
       android:layout_alignParentTop="true"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/username"
        android:layout_alignRight="@+id/submit"
        android:layout_alignEnd="@+id/signup"
        android:layout_marginTop="@dimen/password"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginRight="@dimen/marginRight"
        android:background="@color/material_pink_800"

        android:text="@string/submit" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/submit"
        android:layout_centerVertical="true"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:background="@color/material_indigo_700"

        android:backgroundTint="@color/material_blue_50"
        android:text="@string/signup" />

</RelativeLayout>
